--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
       </tr>
       <tr>
         <td>Minister of the Environment and Climate Change</td>
-        <td>Krista Mikkonen</td>
+        <td>Emma Kari</td>
       </tr>
       <tr>
         <td>Minister for European Affairs, Culture and Sport</td>
@@ -63,7 +63,7 @@
       </tr>
       <tr>
         <td>Minister of the Interior</td>
-        <td>Maria Ohisalo</td>
+        <td>Krista Mikkonen</td>
       </tr>
       <tr>
         <td>Minister of Justice</td>
