--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
       </tr>
       <tr>
         <td>Speaker of the Parliament</td>
-        <td>Anu Vehviläinen</td>
+        <td>Matti Vanhanen</td>
       </tr>
       <tr>
         <td>Chancellor of Justice</td>
