--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
       </tr>
       <tr>
         <td>Minister of Family Affairs and Social Services</td>
-        <td>Krista Kiuru</td>
+        <td>Aki Lindén</td>
       </tr>
       <tr>
         <td>Minister for Foreign Affairs</td>
