--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
       </tr>
       <tr>
         <td>mayor of Helsinki</td>
-        <td>Jan Vapaavuori</td>
+        <td>Juhana Vartiainen</td>
       </tr>
       <tr>
         <td>mayor of Turku</td>
