--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
       </tr>
       <tr>
         <td>Minister of Agriculture and Forestry</td>
-        <td>Jari Leppä</td>
+        <td>Antti Kurvinen</td>
       </tr>
       <tr>
         <td>Minister of Defence</td>
@@ -79,7 +79,7 @@
       </tr>
       <tr>
         <td>Minister of Science and Culture</td>
-        <td>Antti Kurvinen</td>
+        <td>Petri Honkonen</td>
       </tr>
       <tr>
         <td>Minister of Social Affairs and Health</td>
